src/cpp/mem65x64.hpp

    // Rust ffi memory access functions

    unsigned char read_byte(unsigned long long addr);
    unsigned short read_word(unsigned long long addr);
    unsigned long read_dword(unsigned long long addr);
    unsigned long long read_qword(unsigned long long addr);
    void write_byte(unsigned long long addr, unsigned char data);
    void write_word(unsigned long long addr, unsigned short data);
    void write_dword(unsigned long long addr, unsigned long data);
    void write_qword(unsigned long long addr, unsigned long long data);
    // Internal fallbacks

    extern unsigned char mem65x64_getByteF(unsigned long long addr);
    extern unsigned short mem65x64_getWordF(unsigned long long addr);
    extern unsigned long mem65x64_getDwordF(unsigned long long addr);
    extern unsigned long long mem65x64_getQwordF(unsigned long long addr);
    extern void mem65x64_setByteF(unsigned long long addr, unsigned char data);
    extern void mem65x64_setWordF(unsigned long long addr, unsigned short data);
    extern void mem65x64_setDwordF(unsigned long long addr, unsigned long data);
    extern void mem65x64_setQwordF(unsigned long long addr, unsigned long long data);