src/cc/emu65x64.hpp

    void emu65x64_setMemory(unsigned long long memMask, unsigned long long ramSize, const unsigned char *pROM) {
        emu65x64::setMemory(memMask, ramSize, pROM);
    }
    void emu65x64_setMemoryRam(unsigned long long memMask, unsigned long long ramSize, unsigned char *pRAM, const unsigned char *pROM) {
        emu65x64::setMemory(memMask, ramSize, pRAM, pROM);
    }
    void emu65x64_reset(bool trace) {
        emu65x64::reset(trace);
    }
    void emu65x64_step() {
        emu65x64::step();
    }
    unsigned long emu65x64_getCycles() {
        return emu65x64::getCycles();
    }
    bool emu65x64_isStopped() {
        return emu65x64::isStopped();
    }
    void emu65x64_setPc(unsigned long long pc) {
        emu65x64::pc = (emu65x64::Qword)pc;
    }